# swc-plugin-negative-indices

./: Cargo.toml  README.md  package.json
.github/workflows/: cargo.yml
src/: lib.rs
swc-plugin-negative-indices/: Cargo.toml
swc-plugin-negative-indices/src/: lib.rs
