[package]
name = "swc-plugin-negative-indices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
abi_stable = "0.10.3"
serde = "1"
swc_atoms = "0.2.9"
swc_common = "0.15.0"
swc_ecmascript = { version = "0.96.0", features = ["visit"] }
swc_plugin = "0.17.0"
swc_plugin_js_api = "0.4.0"
